--- a/search.css
+++ b/search.css
@@ -20,7 +20,7 @@ select, button {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
-    border: 1px solid #ddd;
+    border: 1px solid #7f0210;
     border-radius: 4px;
 }
 .donor-block {
