--- a/templates/donor.html
+++ b/templates/donor.html
@@ -42,6 +42,6 @@
     <div class="donor-container" id="donorsContainer">
         <!-- Donor data will be populated here -->
     </div>
-    <script src="donor.js"></script>
+    <script src="js/donor.js"></script>
 </body>
 </html>
