--- a/templates/register.html
+++ b/templates/register.html
@@ -146,10 +146,10 @@
             <button type="submit">Register</button>
         </form>
         <div class="redirect">
-            <p>Already have an account? <a href="http://127.0.0.1:3000/login.html">Login here</a></p>
+            <p>Already have an account? <a href="http://localhost:3000/login.html">Login here</a></p>
         </div>
     </div>
-    <script src="register.js"></script>
+    <script src="js/register.js"></script>
     <script>
         // Populate Day dropdown
         const dobDay = document.getElementById('dobDay');
