--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="static/dashboard.css">
 </head>
 <body>
     <div class="tabs">
@@ -111,7 +111,7 @@
         </form>
     </div>
 </div>
-    <script src="dashboard.js"></script>
+    <script src="js/dashboard.js"></script>
     <script>
         // Populate Day dropdown
         const dobDay = document.getElementById('dobDay');
