--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 
 <body>
@@ -17,9 +17,10 @@
                         <!-- <a href="#"><img src="" width="60" height="60" class="logo" alt="Logo"></a> -->
                         <nav >
                             <ul class="navi" style="justify-content: right; padding: 20px; ; ">
-                                <li style="margin-right:25px ;"><a href="index.html" style="font-size: 20px;">HOME</a></li>
-                                <li style="margin-right:25px ;"><a href="search.html"  style="font-size: 20px;">CHECK <br> AVALIBILITY</a></li>
-                                <li ><a href="login.html"  style="font-size: 20px;">DONAR LOGIN</a></li>
+                                <li style="margin-right:25px ;"><a href="/index.html" style="font-size: 20px;">HOME</a></li>
+                                <li style="margin-right:25px ;"><a href="/search.html"  style="font-size: 20px;">SEARCH</a></li>
+                                <li ><a href="/login.html"  style="font-size: 20px;">LOGIN</a></li>
+                                <li ><a href="/donor.html"  style="font-size: 20px;">DONARS</a></li>
                                 <!-- <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li> -->
                             </ul>
                         </nav>
@@ -29,10 +30,10 @@
             
             <section class="heroComponent">
                 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-item "><img src="front_image.png" class="d-block w-100" alt="Second Image">
+                    <div class="carousel-item "><img src="static/front_image.png" class="d-block w-100" alt="Second Image">
                         <div class="carousel-caption d-md-block mt-3" style="left: 7%; bottom: 0px;"><button
                                 class="btn imgBtn d-none d-lg-block d-xl-block"
-                                onclick="window.location.href='login.html'">BECOME A DONOR</button></div>
+                                onclick="window.location.href='register.html'">BECOME A DONOR</button></div>
                     </div>
                 </div>
         </div>
@@ -104,7 +105,7 @@
                                     </div>
                                     <div
                                         class="d-flex flex-column align-items-center pe-xl-5 pe-lg-5 col-xl-5 col-lg-5 col-md-5 col-12">
-                                        <img src="doctor.png" alt="">
+                                        <img src="static/doctor.png" alt="">
                                         <p class="donate-blood-txt mb-0">One Blood Donation can save upto <span
                                                 class="">Three</span> Lives</p>
                                     </div>
@@ -122,7 +123,7 @@
                     </h3>
                     <div class="d-xl-flex justify-content-between">
                         <div class="card-container pb-4">
-                            <div class="card h-100 align-items-center pt-4"><img src="reg-img.png" class="img-fluid"
+                            <div class="card h-100 align-items-center pt-4"><img src="static/reg-img.png" class="img-fluid"
                                     alt="..." width="78px" height="78px">
                                 <div class="card-body text-center pt-4 pb-3">
                                     <p class="card-text mb-0">Registration Process</p>
@@ -133,7 +134,7 @@
                         <div class="arrow-container mb-3 d-flex align-items-center justify-content-center"><img
                                 src="arrow-left.png" class="img-fluid" alt=""></div>
                         <div class="card-container pb-4">
-                            <div class="card h-100 align-items-center pt-4"><img src="heart-img.png" class="img-fluid"
+                            <div class="card h-100 align-items-center pt-4"><img src="static/heart-img.png" class="img-fluid"
                                     alt="..." width="78px" height="78px">
                                 <div class="card-body text-center pt-4 pb-3">
                                     <p class="card-text mb-0">Health Screening</p>
@@ -145,7 +146,7 @@
                         <div class="arrow-container mb-3 d-flex align-items-center justify-content-center"><img
                                 src="arrow-left.png" class="img-fluid" alt=""></div>
                         <div class="card-container pb-4">
-                            <div class="card h-100 align-items-center pt-4"><img src="pay-img.png" class="img-fluid"
+                            <div class="card h-100 align-items-center pt-4"><img src="static/pay-img.png" class="img-fluid"
                                     alt="..." width="78px" height="78px">
                                 <div class="card-body text-center pt-4 pb-3">
                                     <p class="card-text mb-0">Donation Day</p>
@@ -161,7 +162,7 @@
     </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 <footer>
     <div>
