--- a/templates/login.html
+++ b/templates/login.html
@@ -63,10 +63,10 @@
             <button type="submit">Login</button>
         </form>
         <div class="redirect">
-            <p>Don't have an account? <a href="http://127.0.0.1:3000/register.html">Register here</a></p>
+            <p>Don't have an account? <a href="http://localhost:3000/register.html">Register here</a></p>
         </div>
     </div>
 
-    <script src="loginform.js"></script> <!-- Link to your JavaScript file -->
+    <script src="js/loginform.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
