--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Donors</title>
-    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="static/search.css">
 </head>
 <body>
     <div class="container">
@@ -32,7 +32,7 @@
         <div id="resultsContainer"></div>
     </div>
 
-    <script src="search.js"></script>
+    <script src="js/search.js"></script>
     <script>
         // States and Cities Data
         const statesAndCities = {
