--- a/templates/register.html
+++ b/templates/register.html
@@ -13,6 +13,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding-top: 150px;
+            padding-bottom: 150px;
         }
         .container {
             background-color: white;
@@ -30,7 +32,7 @@
         input[type="password"],
         input[type="tel"],
         select {
-            width: 100%;
+            width: 95%;
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ddd;
@@ -40,7 +42,7 @@
             margin: 10px 0;
         }
         .dob-group select {
-            width: 32%;
+            width: 30%;
             margin-right: 1%;
         }
         button {
@@ -91,7 +93,7 @@
             <!-- Gender Radio Buttons -->
             <div class="gender-group">
                 <label>Gender:</label><br>
-                <input type="radio" id="male" name="gender" value="Male" required> Male
+                <input type="radio" id="male" name="gender" value="Male" required> Male <br>
                 <input type="radio" id="female" name="gender" value="Female" required> Female
             </div>
 
