--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Search Donors</h2>
+        <h2 style="text-align: center;">Search Donors</h2>
         <select id="state">
             <option value="" disabled selected>Select State</option>
             <!-- Populate with states -->
