--- a/templates/static/styles.css
+++ b/templates/static/styles.css
@@ -401,7 +401,10 @@ li ul li a:hover {
 
 /* Learn About Donation Section */
 .learn-donation {
-    background-color: #f8f9fa;
+    background-image: url(background.png) !important;
+    background-size: cover; /* or 'contain', 'auto', etc. */
+    background-position: center; /* to center the image */
+    background-repeat: no-repeat;
     padding: 50px 0;
 }
 
