--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
                     <!-- <a href="#"><img src="" width="60" height="60" class="logo" alt="Logo"></a> -->
                     <nav>
                         <ul class="navi" style="justify-content: right; padding: 20px; ; ">
-                            <li style="margin-right:25px ;"><a href="/index.html" style="font-size: 20px;">HOME</a></li>
-                            <li style="margin-right:25px ;"><a href="/search.html" style="font-size: 20px;">SEARCH</a>
+                            <li style="margin-right:25px ;"><a href="index.html" style="font-size: 20px;">HOME</a></li>
+                            <li style="margin-right:25px ;"><a href="search.html" style="font-size: 20px;">SEARCH</a>
                             </li>
-                            <li style="margin-right:25px ;"><a href="/login.html" style="font-size: 20px;">LOGIN</a>
+                            <li style="margin-right:25px ;"><a href="login.html" style="font-size: 20px;">LOGIN</a>
                             </li>
-                            <li><a href="/donor.html" style="font-size: 20px;">DONARS</a></li>
+                            <li><a href="donor.html" style="font-size: 20px;">DONARS</a></li>
                             <!-- <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li> -->
                         </ul>
                     </nav>
