--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                             </li>
                             <li style="margin-right:25px ;"><a href="login.html" style="font-size: 20px;">LOGIN</a>
                             </li>
-                            <li><a href="donor.html" style="font-size: 20px;">DONARS</a></li>
+                            <li><a href="donor.html" style="font-size: 20px;">DONORS</a></li>
                             <!-- <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li> -->
                         </ul>
                     </nav>
