google meet changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="static/dashboard.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 
 <body>
     <div class="tabs">
-        <div id="dashboardTab" class="tab">Dashboard</div>
-        <div id="updateAccountTab" class="tab">Update Account</div>
-        <div id="changePasswordTab" class="tab">Change Password</div>
-        <div id="logoutTab" class="tab">Log Out</div>
-        <div id="deleteTab" class="tab">Delete</div>
+        <div id="dashboardTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-home"></i> </i>  Dashboard</div> <!-- Home Icon -->
+        
+        <div id="updateAccountTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-user"></i>  Update Account</div>
+        <div id="changePasswordTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-key"></i>  Change Password</div>
+        <div id="logoutTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-sign-out-alt"></i>  Log Out</div>
+        <div id="deleteTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-trash"></i>  Delete</div>
     </div>
-    <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 100%;  ">
-        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 70%;">
+    <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 100%; ">
+        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 70%;  background-color: transparent;">
             <h3>Thank you for considering about donating blood!<h3>
                     <p>Your decision could make a life-saving difference for someone in need.</p> Each donation has the
                     power to help patients undergoing surgery, cancer treatment, or those in emergency situations. It’s
