--- a/templates/index.html
+++ b/templates/index.html
@@ -44,12 +44,12 @@
         <div class="donorCount">
             <div class="d-xl-flex d-lg-flex d-md-flex d-sm-flex">
                 <div class="bg-left w-100 text-xl-end text-lg-end text-md-end text-sm-end text-center py-3 px-5">
-                    <p id="registeredDonorsAll" class="count mb-0">5734542</p>
+                    <p id="registeredDonorsAll" class="count mb-0">-</p>
                     <p class="totalCount mb-0">Donor Registered</p>
                 </div>
                 <div
                     class="bg-right w-100 text-xl-start text-lg-start text-md-start text-sm-start text-center py-3 px-5">
-                    <p id="donorsDonatedAll" class="count mb-0">5632125</p>
+                    <p id="donorsDonatedAll" class="count mb-0">-</p>
                     <p class="totalCount mb-0">Blood Units Collected</p>
                 </div>
             </div>
