--- a/templates/static/dashboard.css
+++ b/templates/static/dashboard.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #e3bcb9d1;
     margin: 0;
     padding: 20px;
-    background-image: url('cell.jpg');
+    /* background-image: url('WhatsApp\ Image\ 2024-09-30\ at\ 23.03.18_203c0316.jpg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; 
+    background-size: cover;  */
 } 
 .tabs {
     margin-bottom: 20px;
