--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 </head>
 
 <body>
@@ -17,12 +18,12 @@
                     <!-- <a href="#"><img src="" width="60" height="60" class="logo" alt="Logo"></a> -->
                     <nav>
                         <ul class="navi" style="justify-content: right; padding: 20px; ; ">
-                            <li style="margin-right:25px ;"><a href="index.html" style="font-size: 20px;">HOME</a></li>
-                            <li style="margin-right:25px ;"><a href="search.html" style="font-size: 20px;">SEARCH</a>
+                            <li style="margin-right:25px ;"><a href="index.html" style="font-size: 18px;"><i class="fas fa-home"></i> HOME</a></li>
+                            <li style="margin-right:25px ;"><a href="search.html" style="font-size: 18px;"><i class="fas fa-search"></i> SEARCH</a>
                             </li>
-                            <li style="margin-right:25px ;"><a href="login.html" style="font-size: 20px;">LOGIN</a>
+                            <li style="margin-right:25px ;"><a href="login.html" style="font-size: 18px;"><i class="fas fa-key"></i> LOGIN</a>
                             </li>
-                            <li><a href="donor.html" style="font-size: 20px;">DONORS</a></li>
+                            <li><a href="donor.html" style="font-size: 18px;"><i class="fas fa-user"></i> DONORS</a></li>
                             <!-- <li><a href="blood_bank_login.html">BLOOD BANK LOGIN</a></li> -->
                         </ul>
                     </nav>
