--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -27,7 +27,10 @@
                     a simple act of kindness that takes just a bit of your time but can mean the world to others. <p>
                         You're not just giving blood — you're giving hope, strength, and life.</p>
                     <p>Thank you for being a hero!</p>
+                    <img src="static/preloader.gif" alt="">
         </div>
+
+        
     </div>
     <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 100%;">
         <div id="updateAccountContent" class="tab-content" style="width: 70%;">
