--- a/templates/login.html
+++ b/templates/login.html
@@ -58,8 +58,8 @@
     <div class="container">
         <h2>Login</h2>
         <form id="loginForm">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
+            <input type="text" id="username" placeholder="Username" style="border:1px solid #7f0210" required>
+            <input type="password" id="password" placeholder="Password"  style="border:1px solid #7f0210"  required><br><br>
             <button type="submit">Login</button>
         </form>
         <div class="redirect">
