--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,16 +12,17 @@
 
 <body>
     <div class="tabs">
-        <div id="dashboardTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-home"></i> </i>  Dashboard</div> <!-- Home Icon -->
-        
+        <div id="dashboardTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-home"></i> </i>  Dashboard</div> 
         <div id="updateAccountTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-user"></i>  Update Account</div>
         <div id="changePasswordTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-key"></i>  Change Password</div>
         <div id="logoutTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-sign-out-alt"></i>  Log Out</div>
         <div id="deleteTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-trash"></i>  Delete</div>
     </div>
+    <!-- content -->
     <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 100%; ">
         <div id="dashboardContent" class="tab-content" style="text-align: center; width: 70%;  background-color: transparent;">
             <h3>Thank you for considering about donating blood!<h3>
+                    <p>"A small needle can give someone a second chance at life."</p>
                     <p>Your decision could make a life-saving difference for someone in need.</p> Each donation has the
                     power to help patients undergoing surgery, cancer treatment, or those in emergency situations. It’s
                     a simple act of kindness that takes just a bit of your time but can mean the world to others. <p>
