--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
     <title>Register</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family:"Droid Sana", sans-serif;
             background-color: #f4f4f4;
             display: flex;
             justify-content: center;
@@ -16,6 +16,7 @@
             margin: 0;
             padding-top: 150px;
             padding-bottom: 150px;
+            /* background-image: url("templates/static/background.png"); */
         }
 
         .container {
