--- a/templates/static/search.css
+++ b/templates/static/search.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family:"Droid Sana", sans-serif;
     background-color: #f4f4f4;
     display: flex;
     justify-content: center;
@@ -7,6 +7,10 @@ body {
     flex-direction: column;
     height: 100vh;
     margin: 0;
+    /* background-image: url("templates/static/background.png");
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; */
 }
 .container {
     background-color: white;
