--- a/templates/donor.html
+++ b/templates/donor.html
@@ -6,10 +6,14 @@
     <title>Donors List</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family:"Droid Sana", sans-serif;
             background-color: #f4f4f4;
             margin: 0;
             padding: 20px;
+            /* background-image: url('static/background.png');
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; */
         }
         h2 {
             text-align: center;
