--- a/templates/login.html
+++ b/templates/login.html
@@ -6,13 +6,18 @@
     <title>Login Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family:"Droid Sana", sans-serif;
+            /* background-color: #f4f4f4; */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-image: url('static/wallpaper3.png');
+            background-size: 100vw 100vh; 
+            background-position: center center; 
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
         .container {
             background-color: white;
