--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family:"Droid Sana", sans-serif;
-            background-color: #f4f4f4;
+            /* background-color: #f4f4f4; */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -16,7 +16,11 @@
             margin: 0;
             padding-top: 150px;
             padding-bottom: 150px;
-            /* background-image: url("templates/static/background.png"); */
+            background-image: url('static/wallpaper3.png');
+            background-size: 100% 100%; 
+            background-position: center center; 
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         .container {
