--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,8 +19,14 @@
         <div id="deleteTab" class="tab" style="border-radius: 15px; border:solid  #7f0210 2px;"><i class="fas fa-trash"></i>  Delete</div>
     </div>
     <!-- content -->
-    <div style="display: flex; justify-content: center; align-content: center; flex-wrap: nowrap; width: 100%; ">
-        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 70%;  background-color: transparent;">
+     <!-- <div style="display: flex; justify-content:left; width: 40%; ">
+        <img src="static/wallpaper1.png">
+     </div> -->
+    <div style="display: flex; justify-content:right; align-content: center; flex-wrap: nowrap; width: 100%; ">
+        <div style="display: flex; justify-content:right; height: 600px; ">
+            <img src="static/wallpaper1.png">
+         </div>
+        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 58%; font-size: 19px;  background-color: transparent; font-family: 'Trebuchet MS', sans-serif; ">
             <h3>Thank you for considering about donating blood!<h3>
                     <p>"A small needle can give someone a second chance at life."</p>
                     <p>Your decision could make a life-saving difference for someone in need.</p> Each donation has the
