--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -26,14 +26,15 @@
         <div style="display: flex; justify-content:right; height: 600px; ">
             <img src="static/wallpaper1.png">
          </div>
-        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 58%; font-size: 19px;  background-color: transparent; font-family: 'Trebuchet MS', sans-serif; ">
-            <h3>Thank you for considering about donating blood!<h3>
+        <div id="dashboardContent" class="tab-content" style="text-align: center; width: 58%;  background-color: transparent; font-family: 'Trebuchet MS', sans-serif; ">
+            <h1>Thank you for considering about donating blood!<h1>
                     <p>"A small needle can give someone a second chance at life."</p>
-                    <p>Your decision could make a life-saving difference for someone in need.</p> Each donation has the
+                    <p>Your decision could make a life-saving difference for someone in need.</p>
+                    <p>Each donation has the
                     power to help patients undergoing surgery, cancer treatment, or those in emergency situations. It’s
                     a simple act of kindness that takes just a bit of your time but can mean the world to others. <p>
-                        You're not just giving blood — you're giving hope, strength, and life.</p>
-                    <p>Thank you for being a hero!</p>
+                    <h2>You're not just giving blood — you're giving hope, strength, and life.</h2>
+                    <h3>Thank you for being a hero!</h3>
                     <img src="static/preloader.gif" alt="">
         </div>
 
