--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,10 @@
             <header class="header">
                 <div class="container">
 
-                    <!-- <a href="#"><img src="" width="60" height="60" class="logo" alt="Logo"></a> -->
+                    <!-- <a href="#"><img src="static/logo.png" class="logo" alt="Logo"></a> -->
                     <nav>
                         <ul class="navi" style="justify-content: right; padding: 20px; ; ">
+                            <a href="#"><img src="static/logo.png" width="40" height="40" class="logo" alt="Logo"></a>
                             <li style="margin-right:25px ;"><a href="index.html" style="font-size: 18px;"><i class="fas fa-home"></i> HOME</a></li>
                             <li style="margin-right:25px ;"><a href="search.html" style="font-size: 18px;"><i class="fas fa-search"></i> SEARCH</a>
                             </li>
