--- a/templates/static/dashboard.css
+++ b/templates/static/dashboard.css
@@ -1,6 +1,6 @@
 body {
     /* font-family:"Droid Sana", sans-serif; */
-    background: #ffff;
+    background:#f0efef;
     background-attachment: fixed; 
     margin: 0;
     padding: 0.5px;
@@ -57,17 +57,20 @@ form {
 input, select {
     padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+    /* border-radius: 4px; */
+    /* box-sizing: border-box; */
 }
 button {
-    padding: 10px 15px;
+    /* padding: 10px 15px; */
     background-color: #7f0210;
     color: white;
     border: none;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     cursor: pointer;
 }
 button:hover {
     background-color: #c0222b;
+}
+p{
+    font-size: 17px;
 }
